Added my feature

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  My GitHub username is chaihtri33
+
 </p>
 
 </body>
